--- a/src/style.css
+++ b/src/style.css
@@ -599,6 +599,9 @@ header .copyright {
   .layout {
     padding-left: 10px;
   }
+  .home h1 {
+    font-size: 2.5rem;
+  }
 }
 
 @media (min-width: 573px) {
